# oglplu2

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.rst  configure.py  index.html  oglplus.css
config/: Baking.cmake  BuildType.cmake  CMakeLists.txt  CommonFindMod.cmake  CommonLibs.cmake  Compiler.cmake  ConfigGL.cmake  CppFeature.cmake  Defaults.cmake  Embed.cmake  EmbedCommon.cmake  ExeRequirements.cmake  FindAL.cmake  FindBoostSpirit.cmake  FindEGL.cmake  FindGL.cmake  FindGL3W.cmake  FindGLES3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGLUT.cmake  FindGLX.cmake  FindGZip.cmake  FindPNG.cmake  FindQT5GL.cmake  FindRYML.cmake  FindSDL.cmake  FindSSL.cmake  FindStacktrace.cmake  FindSystemd.cmake  FindThreads.cmake  FindValgrind.cmake  FindWXGL.cmake  FindZLIB.cmake  GLExt.cmake  GLFeat.cmake  GLVer.cmake  GLVerExt.cmake  (+12 more)
config/cpp/: bool_const_ops.hpp.in  bool_const_ops_fix.hpp.in  bool_const_ops_std.hpp.in  filesystem_fix.hpp.in  filesystem_std.hpp.in  has_TYPE_TRAIT1_t.cpp.in  has_TYPE_TRAIT1_v.cpp.in  has_TYPE_TRAIT2_t.cpp.in  has_TYPE_TRAIT2_v.cpp.in  has_TYPE_TRAIT_t.cpp.in  has_aligned_storage_t.cpp.in  has_bool_const_ops.cpp.in  has_conditional_t.cpp.in  has_enable_if_t.cpp.in  has_filesystem.cpp.in  has_int_sequence.cpp.in  has_invoke.cpp.in  has_is_convertible_t.cpp.in  has_is_convertible_v.cpp.in  has_is_polymorphic_t.cpp.in  has_is_polymorphic_v.cpp.in  has_is_same_t.cpp.in  has_is_same_v.cpp.in  has_optional.cpp.in  has_result_of_t.cpp.in  has_underlying_type_t.cpp.in  has_variant.cpp.in  int_sequence.hpp.in  int_sequence_fix.hpp.in  int_sequence_std.hpp.in  invoke_fix.hpp.in  invoke_std.hpp.in  make_TYPE_TRAIT1_t.inl.in  make_TYPE_TRAIT1_v.inl.in  make_TYPE_TRAIT2_t.inl.in  make_TYPE_TRAIT2_v.inl.in  make_TYPE_TRAIT_t.inl.in  make_aligned_storage_t.inl.in  make_conditional_t.inl.in  make_enable_if_t.inl.in  (+13 more)
config/eagine/: type_traits_fixes.hpp.in
config/gl/: assert_GL_VER_symbols.ipp.in  decl_GL_test.ipp.in  has_GLEW_EXT.cpp.in  has_GLEW_NV_path_rendering.cpp  has_GL_ARB_compatibility.cpp  has_GL_ARB_geometry_shader4.cpp  has_GL_ARB_gpu_shader_fp64.cpp  has_GL_ARB_separate_shader_objects.cpp  has_GL_ARB_transform_feedback2.cpp  has_GL_EXT.cpp.in  has_GL_EXT.ipp.in  has_GL_EXT_direct_state_access.cpp  has_GL_KHR_debug.cpp  has_GL_NV_path_rendering.cpp  has_GL_VER.cpp.in  has_GL_geometry_shader.cpp  has_GL_texture_1d.cpp  impl_GL_test.ipp.in  init_GL.ipp.in
config/home/: ssh-bridge
config/info/: CMakeLists.txt
config/systemd/: CMakeLists.txt  eagine-message_bus-file_server.service  eagine-message_bus-pingable@.service  eagine-message_bus-router.service  eagine-message_bus-ssh-bridge@.service  eagine-message_bus-sudoku_helper.service
config/tools/: CMakeLists.txt  bash-complete  complete-run_test  embed_generator  run_test-oglplus
config/user/: CMakeLists.txt  execute  ssh-bridge  update-me  update-me.sh
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile-common  Doxyfile-common.in  Doxyfile-html  Doxyfile-html.in  Doxyfile-xml  footer.html  header.html  oglplus.css
doc/logo/: CMakeLists.txt
doc/sphinx/: CMakeLists.txt  conf.py  conf.py.in  eagine.rst  eglplus.rst  index.rst  intro.rst  oalplus.rst
example/: CMakeLists.txt
example/application/: CMakeLists.txt
example/combined/: 001_clear.cpp  002_spectrum_compat.cpp  002_triangle.cpp  003_checker_compat.cpp  003_spectrum.cpp  003_triangle.cpp  004_pick_triangle.cpp  007_cube.cpp  011_mandelbrot.cpp  013_occlusion.cpp  029_single_pass_edges.cpp  CMakeLists.txt  example.hpp
example/eagine/: CMakeLists.txt  animated_value.cpp  application_config.cpp  args_within_limits.cpp  array_size.cpp  base64.cpp  bindump.cpp  build_info.cpp  c_api_wrap.cpp  callable_composer.cpp  compress_self.cpp  dyn_lib_lookup.cpp  ecs_elements.cpp  ecs_elements.json  edit_distance.cpp  embed_baked.cpp  embed_self.cpp  environment.cpp  extract.cpp  from_string.cpp  hexdump.cpp  id_tag.cpp  identifier.cpp  identity.cpp  integer_hash.cpp  interleaved_call.cpp  limit_cast.cpp  log_histogram.cpp  make_index.cpp  memoized.cpp  network_sort.cpp  overloaded.cpp  progress_bar.cpp  random_bytes.cpp  scope_exit.cpp  shape_topology.cpp  signal_switch.cpp  str_format.cpp  string_path.cpp  sudoku_noise.cpp  (+15 more)
example/eglplus/: 001_basic_info.cpp  002_list_apis.cpp  003_list_extensions.cpp  005_list_configs.cpp  006_multisample_configs.cpp  007_depth_stencil_configs.cpp  008_list_extensions.cpp  CMakeLists.txt
example/oalplus/: 001_basic_info.cpp  001_list_devices.cpp  002_list_devices.cpp  002_list_extensions.cpp  003_list_extensions.cpp  004_context_info.cpp  005_hello_world.cpp  CMakeLists.txt
example/obsolete/: 005_path_nv_text.cpp  008_texgen.cpp  011_scaled_cubes.cpp  012_image_file.cpp  028_lighting.cpp  031_texgen.cpp  032_extruded.cpp
example/oglplus/: 001_clear.cpp  001_glfw3_glew_clear.cpp  001_glfw3_glew_info.cpp  002_glfw3_glew_triangle.cpp  002_glfw3_glew_triangle_compat.cpp  003_glfw3_glew_checker.cpp  003_glfw3_glew_checker_compat.cpp  003_glfw3_glew_path_nv.cpp  003_spectrum.cpp  004_glfw3_glew_path_nv_text.cpp  004_glfw3_glew_spiral.cpp  004_glfw3_glew_spiral_compat.cpp  004_pick_triangle.cpp  005_path_nv_text.cpp  008_texgen.cpp  009_glfw3_glew_cube.cpp  009_glfw3_glew_cube_compat.cpp  009_mandelbrot.cpp  009_newton.cpp  010_cube.cpp  011_mandelbrot.cpp  011_scaled_cubes.cpp  012_glfw3_glew_cube.cpp  012_image_file.cpp  013_occlusion.cpp  014_voronoi.cpp  015_lighting.cpp  018_recursive_cube.cpp  020_glfw3_glew_recursive_cube.cpp  028_lighting-bg.fs.glsl  028_lighting.cpp  029_cel_shading.cpp  029_single_pass_edges.cpp  030_recursive_cube.cpp  031_texgen.cpp  032_extruded.cpp  CMakeLists.txt  example.hpp  example_main.cpp  example_main_glfw.cpp  (+11 more)
example/standalone/: 001_glfw3_glew_clear.cpp  001_glfw3_glew_info.cpp  001_glfw_glew_clear.cpp  001_glfw_glew_info.cpp  002_glfw3_glew_triangle.cpp  (+18 more)
source/: CMakeLists.txt  eagine-servicectl.py
test/: CMakeLists.txt  main_ctx.hpp  random.hpp  testing.cmake
(+5918 files in other folders)
