# Copyright Matus Chochlik.
# Distributed under the Boost Software License, Version 1.0.
# See accompanying file LICENSE_1_0.txt or copy at
#  http://www.boost.org/LICENSE_1_0.txt

add_subdirectory("eagine")
add_subdirectory("eglplus")
add_subdirectory("oalplus")
add_subdirectory("oglplus")
add_subdirectory("combined")
