#  Copyright Matus Chochlik.
#  Distributed under the Boost Software License, Version 1.0.
#  See accompanying file LICENSE_1_0.txt or copy at
#   http://www.boost.org/LICENSE_1_0.txt
#

# install the embed generator tool
install(
	PROGRAMS embed_generator
	RENAME eagine-embed_generator
	DESTINATION bin
)
